# pytorch-digits-example

./: .gitignore  README.md  digits.ipynb  main.py  pyproject.toml
