[project]
name = "pytorch-digits-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.7"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter==1.1.0",
    "matplot>=0.1.9",
    "matplotlib>=3.10.8",
    "numpy==2.1.3",
    "torch==2.2.2",
    "torchvision==0.17.2",
]

[tool.uv]
# No required-environments: let uv resolve for the current platform (macOS, Python 3.12.7).
